# video-cutter

./: .env  AGENTS.md  README.md  justfile  main.py  pyproject.toml
video_cutter/: __init__.py  app.py  controller.py  debug.py  media.py  models.py  mpv_item.py  persistence.py  render_runner.py  rendering.py  sections_model.py
video_cutter/qml/: Main.qml
