[project]
name = "video-cutter"
version = "0.1.0"
description = "A simplistic desktop video cutter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["PyOpenGL>=3.1.7", "PySide6>=6.8", "mpv>=1.0.8"]

[tool.pyright]
venv = ".venv"
venvPath = "."

[dependency-groups]
dev = ["ruff>=0.8", "types-toml>=0.10.8"]

# Check the Ruff documentation for more info on how to configure this
# General docs: https://docs.astral.sh/ruff/configuration/
# Explicit docs for individual settings: https://docs.astral.sh/ruff/settings/
[tool.ruff]
exclude = [".venv", "__init__.py"]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.lint]
fixable = [
  "E",
  "F",
  "I",
  "RUF", # Ruff Rules
  "UP",  # Language feature updates
]
select = [
  "E",   # Pycodestyle
  "F",   # Pyflakes
  "I",   # Isort
  "RUF", # Ruff Rules
  "UP",  # Language feature updates
]

# 4. Ignore `E402` (import violations) in all `__init__.py` and misc files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
